--- a/app/views/welcome_page/welcome.html.erb
+++ b/app/views/welcome_page/welcome.html.erb
@@ -1,2 +1,4 @@
-<h1>WelcomePage#welcome</h1>
-<p>Find me in app/views/welcome_page/welcome.html.erb</p>
+<h1>Welcome</h1>
+<p><%= link_to 'Index of Artices', controller: articles %>
+<%= link_to 'Create New Entry', new_article_path %>
+</p>
