--- a/app/views/welcome_page/welcome.html.erb
+++ b/app/views/welcome_page/welcome.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome</h1>
-<p><%= link_to 'Index of Artices', controller: articles %>
+<p><%= link_to 'Index of Artices', controller: 'articles' %>
 <%= link_to 'Create New Entry', new_article_path %>
 </p>
