--- a/app/views/welcome_page/welcome.html.erb
+++ b/app/views/welcome_page/welcome.html.erb
@@ -2,3 +2,5 @@
 <p><%= link_to 'Index of Artices', controller: 'articles' %>
 <%= link_to 'Create New Entry', new_article_path %>
 </p>
+<br>
+<h3> Testing </h3>
